# ExportLikes

./: .gitignore  CMakeLists.txt  README.md  main.cpp
forms/: exportlikes.ui
include/: AuthorizationServer.hpp  HelperPKCE.hpp  QtSpotifyClient.hpp  SpotifyClient.hpp  SpotifyIoService.hpp  exportlikes.hpp
scripts/: export_yandex_music_likes.py
src/: AuthorizationServer.cpp  HelperPKCE.cpp  QtSpotifyClient.cpp  SpotifyClient.cpp  SpotifyIoService.cpp  exportlikes.cpp
